--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
 
     //navigation
     implementation("androidx.navigation:navigation-compose:$nav_version")
+
+    //livedata
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 }
