--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "hu.bme.aut.nutritiontracker"
-        minSdk 21
+        minSdk 24
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -49,6 +49,7 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
     def nav_version = "2.4.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -82,4 +83,8 @@ dependencies {
 
     //coil
     implementation("io.coil-kt:coil-compose:1.3.2")
+
+    //coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.1"
+
 }
