--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     //coil
     implementation("io.coil-kt:coil-compose:1.3.2")
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 
     //coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.1"
